# napari-chat-assistant

./: .gitignore  .png.tif  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test_and_deploy.yml
docs/: adoption_metrics.md  assistant_reference.md  developer_tool_inventory.md  telemetry_results.md  tested_models.md
output/: 2d_test_mask_montage
output/2d_test_mask_montage_assets.__tmp__/layer_000_000_image.ome.zarr/: .zattrs
output/2d_test_mask_montage_assets.__tmp__/layer_000_000_image.ome.zarr/0/: .zarray  0.0.0  0.1.0  0.2.0  0.3.0  0.4.0  0.5.0  0.6.0  0.7.0  1.0.0  1.1.0  1.2.0  1.3.0  1.4.0  1.5.0  1.6.0  1.7.0  2.0.0  2.1.0  2.2.0  2.3.0  2.4.0  2.5.0  2.6.0  2.7.0  3.0.0  3.1.0  3.2.0  3.3.0  3.4.0  3.5.0  3.6.0  3.7.0  4.0.0  4.1.0  4.2.0  4.3.0  4.4.0  4.5.0  4.6.0  (+25 more)
output/2d_test_mask_montage_assets/layer_000_000_image.ome.zarr/: .zattrs
output/2d_test_mask_montage_assets/layer_000_000_image.ome.zarr/0/: 0.0.0  0.1.0  1.0.0  1.1.0
output/2d_test_mask_montage_assets/layer_001_001_image.ome.zarr/: .zattrs
output/2d_test_mask_montage_assets/layer_001_001_image.ome.zarr/0/: .zarray  0.0.0  0.1.0  1.0.0  1.1.0
output/2d_test_mask_montage_assets/layer_002_002_image.ome.zarr/: .zattrs
output/2d_test_mask_montage_assets/layer_002_002_image.ome.zarr/0/: 0.1  1.1
output/2d_test_mask_montage_assets/layer_003_003_image.ome.zarr/: .zattrs
output/2d_test_mask_montage_assets/layer_003_003_image.ome.zarr/0/: 0.0  0.1  1.0  1.1
output/2d_test_mask_montage_assets/layer_004_004_image.ome.zarr/: .zattrs
output/2d_test_mask_montage_assets/layer_004_004_image.ome.zarr/0/: .zarray  0.0  0.1  1.0  1.1
output/2d_test_mask_montage_assets/layer_005_005_image.ome.zarr/: .zattrs
output/2d_test_mask_montage_assets/layer_005_005_image.ome.zarr/0/: .zarray  0.0  0.2  0.3  0.4  0.5  0.6  1.0  1.2  1.3  1.4  1.5  1.6
output/2d_test_mask_montage_assets/layer_006_006_labels.ome.zarr/: .zattrs
output/2d_test_mask_montage_assets/layer_012_007_labels.ome.zarr/: .zattrs
scripts/: atlas_refinement_smoke_test.py
src/napari_chat_assistant/: napari.yaml
src/napari_chat_assistant/agent/: __init__.py  action_library.py  client.py  code_validation.py  context.py  dispatcher.py  followup_semantics.py  image_ops.py  intent_state.py  logging_utils.py  pending_action.py  profiler.py  prompt_library.py  prompt_routing.py  recent_action_state.py  sam2_backend.py  session_memory.py  telemetry_report.py  telemetry_summary.py  template_library.py  tool_registry.py  tool_types.py  tools.py  ui_help.py  ui_state.py  workflow_executor.py  workflow_planner.py  workspace_state.py
src/napari_chat_assistant/atlas_stitch/: __init__.py  models.py  ome_zarr_export.py  project_state.py  refinement_diagnostics.py  refinement_overlap.py  refinement_solver.py  seam_repair.py  widget.py  xml_parser.py
src/napari_chat_assistant/integrations/: sam2_adapter.py
src/napari_chat_assistant/telemetry/: __init__.py  activity_logger.py  intent_tracker.py  logging_utils.py  report.py  summary.py
src/napari_chat_assistant/voice/: audio_recorder.py  config.py  controller.py  voice_input_widget.py
src/napari_chat_assistant/widgets/: __init__.py  chat_widget.py  group_comparison_widget.py  intensity_metrics_widget.py  line_profile_widget.py  message_formatting.py  relabel_mask_widget.py
tests/: conftest.py  test_action_library.py  test_assistant_prompt.py  test_atlas_ome_zarr_export.py  test_atlas_refinement_overlap.py  test_atlas_refinement_solver.py  test_atlas_ui_metadata.py  test_chat_widget.py  test_code_validation.py  test_followup_semantics.py  test_intent_state.py  test_message_formatting.py  test_pending_action.py  test_profiler.py  test_prompt_library.py  test_prompt_routing.py  test_recent_action_state.py  test_sam2_backend.py  test_telemetry_report.py  test_telemetry_summary.py  test_template_library.py  test_tool_registry.py  test_ui_help.py  test_viewer_bound_workflows.py  test_voice_input.py  test_workflow_executor.py  test_workflow_planner.py  test_workflow_reporting.py  test_workspace_state.py
(+15 files in other folders)
