[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-chat-assistant"
version = "1.1.1"
description = "Local chat assistant scaffold for napari image-analysis workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Wulin Teo" },
]
dependencies = [
  "napari",
  "numpy",
  "qtpy",
  "scipy",
  "scikit-image",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.entry-points."napari.manifest"]
napari-chat-assistant = "napari_chat_assistant:napari.yaml"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_chat_assistant = ["napari.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
