[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-chat-assistant"
version = "1.8.2"
description = "Local AI and deterministic workbench for napari image-analysis workflows"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Wulin Teo" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: napari",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "matplotlib",
  "napari",
  "numpy",
  "numcodecs",
  "ome-zarr",
  "qtpy",
  "scipy",
  "scikit-image",
  "zarr",
]

[project.urls]
Homepage = "https://github.com/wulinteousa2-hash/napari-chat-assistant"
Repository = "https://github.com/wulinteousa2-hash/napari-chat-assistant"
Issues = "https://github.com/wulinteousa2-hash/napari-chat-assistant/issues"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
napari-chat-assistant-telemetry-report = "napari_chat_assistant.agent.telemetry_report:main"

[project.entry-points."napari.manifest"]
napari-chat-assistant = "napari_chat_assistant:napari.yaml"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_chat_assistant = ["napari.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
